# ncmds

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  app.py  config.yaml  ncmds.py  netlify.toml  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.frontend.json  tsconfig.json  vercel.json  wsgi.py
ai_chat/: __init__.py  llm_client.py  routes.py
api/: index.py
config/: __init__.py  ai_chat_example.yaml  config.yaml  hero_customization_guide.md  settings.py
config/themes/: TEMPLATE.md  cyberpunk.yaml  forest.yaml  monochrome.yaml  ncmds_default.yaml  ocean.yaml  purple.yaml  sunset.yaml
docs/: 01-index.md  02-getting-started.md  03-configuration.md  04-markdown-guide.md  05-themes.md  06-deployment.md  07-components.md  08-export.md
export/: README.md  __init__.py  export_routes.py  pdf_export.py  qmd_export.py
netlify/functions/: app.py
src/: app.ts  app.ts.bak  server.ts
src/ts/: ai_chat.ts  globals.d.ts  main.ts
src/ts/components/: doc_navigation.ts  export_buttons.ts  footer.ts  header.ts  sidebar.ts  toc.ts
static/: ai_chat.css  ai_chat.js  ai_chat.ts  main.css  main.js  search.js  search.ts  style.css
static/components/: doc_navigation.js  export_buttons.js  footer.js  header.js  sidebar.js  toc.js
static/default_theme/: base.css  code.css  content.css  export_buttons.css  header.css  hero.css  navigation.css  responsive.css  search.css  sidebar.css  toc.css  utilities.css
templates/: 404.html  home.html  insights_content.html  layout.html
templates/components/: doc_navigation.html  footer.html  head.html  header.html  scripts.html
templates/components/html/: ai_chat.html  backlinks.html  export_buttons.html  footer.html  head.html  header.html  sidebar.html  text_to_speech_button.html  toc.html
templates/components/scripts/: scripts.html
utils/: math_render.py
